--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,32 +6,50 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-  <TextView
-    android:id="@+id/tvDisplay"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-  	android:text = "@string/total_cost"
-  	android:textSize="30sp"
-  	android:layout_gravity ="center"
-  	android:gravity="center"
-  	android:paddingBottom="20sp"
-  	android:paddingTop="10sp"
-  />
-  
-  <Button
-    android:id="@+id/btnAdd"
-  	android:layout_width="200sp"
-  	android:layout_height="wrap_content"
-  	android:text="@string/btn_1"
-  	android:layout_gravity="center"
-  />
-	
-  <Button
-    android:id="@+id/btnMinus"
-  	android:layout_width="200sp"
-  	android:layout_height="wrap_content"
-  	android:text="@string/btn_2"
-  	android:layout_gravity="center"
-  />
-  
+    <TextView
+        android:id="@+id/tvDisplay"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingBottom="20sp"
+        android:paddingTop="10sp"
+        android:text="@string/total_cost"
+        android:textSize="30sp" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:text="1" />
+
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:text="2" />
+        
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:text="3" />
+        
+        <Button
+            android:id="@+id/btnPlus"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:text="+" />
+    
+    </LinearLayout>
+
 </LinearLayout>
