--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" 
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
+    >
+    
+    <LinearLayout 
+    android:orientation="vertical" 
     android:background="@drawable/botcha"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
@@ -8,5 +16,25 @@
     android:gravity="center"
     >
     
+    </LinearLayout>
+        
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+    	android:gravity="center"
+        >
+    
+	    <TextView
+	        android:id="@+id/tvDisplay"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:paddingTop="10sp"
+	        android:textColor="#fcb421"
+	        android:gravity="center"
+	        android:text="@string/splash_title"
+	        android:textSize="30sp" />
+    
+    </LinearLayout>
    
 </LinearLayout>
